Added third line

--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
   <body>
     <p>It was a dark and stormy night...</p>
 	<p>This is a secret line</p>
+	<p>This is the third line we are adding</p>
   </body>
 </html>
